Corrected styles, border pictures don't lay over text, on small screens they aren't displayed at all.

--- a/caas/static/css/main.css
+++ b/caas/static/css/main.css
@@ -3,16 +3,24 @@
        } 
 
 .container {
-             border-image-slice: 0 243 0 243; 
+            /* border-image-slice: 0 243 0 243; 
              border-image-width: 0px 60px 0px 60px; 
              border-image-outset: 0px 0px 0px 0px; 
              border-image-repeat: stretch round; 
-             border-image-source: url("/static/css/images/bord_23_left.png");
+             border-image-source: url("/static/css/images/bord_23_left.png"); */
              background-color: #000000;
              }
 
-
-
+@media (min-width: 768px) {
+  .inner {
+      border-image-slice: 0 260 0 260; 
+      border-image-width: 0px 60px 0px 60px; 
+      /*border-image-outset: 0px 30px 0px 30px; */
+      border-image-repeat: stretch round; 
+      border-image-source: url("/static/css/images/bord_23_left.png");
+      background-color: #000000;
+  }
+}
 #yellowfonts { 
    color:#bbbb00;
             }
